<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3"
            >

            <TextView
                android:id="@+id/textview_lab1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/White"
                android:gravity="center"
                android:text="@string/lab2"
                android:textColor="@color/Crimson"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="centerCrop"

                android:src="@drawable/flower"
                android:contentDescription="@string/seneca"
                />


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="4.5"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <EditText
                    android:layout_marginLeft="16dp"
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:background="@color/NavajoWhite"
                    android:hint="@string/username_hint" />

                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="15dp"
                    android:textColor="@color/OrangeRed"
                    />

                <RadioGroup
                    android:id="@+id/rgmonth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <RadioButton
                        android:id="@+id/jan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:text="@string/ja"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/feb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/fe" />

                    <RadioButton
                        android:id="@+id/mar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/ma" />

                    <RadioButton
                        android:id="@+id/apr"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/ap" />

                    <RadioButton
                        android:id="@+id/may"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/may"/>

                    <RadioButton
                        android:id="@+id/jun"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/jun" />

                    <RadioButton
                        android:id="@+id/jul"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/jul" />

                    <RadioButton
                        android:id="@+id/aug"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/aug" />

                    <RadioButton
                        android:id="@+id/sep"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/sep" />

                    <RadioButton
                        android:id="@+id/oct"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/oct" />

                    <RadioButton
                        android:id="@+id/nov"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/nov" />

                    <RadioButton
                        android:id="@+id/dec"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:buttonTint="#FFD700"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:text="@string/dec" />



                </RadioGroup>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:layout_marginLeft="16dp"
                    android:id="@+id/day"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:inputType="number"
                    android:background="@color/NavajoWhite"
                    android:hint="@string/bnumber" />

                <TextView
                    android:id="@+id/tv_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tscolor"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="15dp"
                    android:textColor="@color/OrangeRed"
                    />

                <CheckBox
                    android:id="@+id/red"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/red"/>
                <CheckBox
                    android:id="@+id/orange"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/orange"/>

                <CheckBox
                    android:id="@+id/yellow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/yellow"/>

                <CheckBox
                    android:id="@+id/green"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/green"/>

                <CheckBox
                    android:id="@+id/blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/blue"/>

                <CheckBox
                    android:id="@+id/indigo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/indigo"/>

                <CheckBox
                    android:id="@+id/violet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/violet"/>

                <CheckBox
                    android:id="@+id/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/black"/>

                <CheckBox
                    android:id="@+id/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/white"/>

                <CheckBox
                    android:id="@+id/pink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:buttonTint="#FFD700"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:text="@string/pink"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1.5"
            >

            <TextView
                android:id="@+id/tv_happy"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/happy"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:textSize="15dp"
                android:textColor="@color/OrangeRed"
                />
            <!--RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3"
                android:layout_gravity="center"
                android:progressTint="@color/Gold"
                android:layout_marginTop="0dp"/-->
            <SeekBar
                android:id="@+id/sb_happy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                >

                <Button
                    android:id="@+id/reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"

                    android:background="@color/Tomato"
                    />

                <Button
                    android:id="@+id/subm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subm"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@color/MediumSeaGreen"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
